# case-dev-backend

./: .env-example  .gitignore  README.md  alembic.ini  docker-compose.yaml  dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
app/: app.py  models.py  schemas.py  settings.py
app/routes/: routes.py
migrations/: env.py
migrations/versions/: 1501d88c2b7c_create_match_table.py  442c585c6707_.py  5bb07b0d4f67_create_users_table.py  a88a58e25650_creating_field_group_in_table_competitor.py  af9cd3605943_.py  cf91bca50aa6_criando_o_campo_is_strat.py  f73b7ac3d155_create_tournament_table.py
tests/: conftest.py  test_app.py  test_db.py  test_routes.py
